Refactored a bunch of code, including adding events (removed from calendar, could be added later but right now with rendering logic the calendar needs to be instantiated to position events. This can be fixed by clearing the positioning variables that the different rendering functions use). The rendering / mapToColumns function was refactored to be able to handle better some weird edge-case overlaps, such as 2 items in a single column but both overlapped by a single other event in the first column. All in all, this is a good final working state to stop at

--- a/mini-calendar.css
+++ b/mini-calendar.css
@@ -115,7 +115,7 @@ h1 { margin-bottom: 2px; }
 }
 .right {
   position: absolute;
-  right: 0px;
+  right: 0;
 }
 
 
